Fix teardown of stale AudioStreamMonitor poll callbacks.

It's possible for the RenderProcessHost and WebContents (and thus AudioStreamMonitor) to
survive the death of the render process and subsequently be reused. During this
period StartStopMonitoringHelper() will be unable to lookup the WebContents
using the now-dead |render_frame_id|. We must thus have a secondary mechanism for clearing stale callbacks.

This change introduces AudioStreamMonitor:RenderProcessGone() which is called by
the WebContents whenever WCO::RenderProcessGone() is. This allows the audio stream
monitor to clear stale callbacks that the AudioOutputDelegateImpl will no longer
be able to route to it.

Subsequently this also fixes a bug on Android (and anywhere else power monitoring
is disabled), where process termination would not correctly clear the audible
state for a process.

On all platforms this fixes a minor leak of AudioOutputController objects, since
they are bound by ref-ptr into the callback map containing stale entries. I say
minor since they would immediately be overwritten if the process is reusued or
tossed completely when the WebContents object goes away.

BUG=692857
TEST=new unittest, manual test:
1. load http://mounirlamouri.github.io/sandbox/autoplay/test.html
2. kill process from task manager.
3. click the reload button == boom (boom no longer after patch!).

Review-Url: https://codereview.chromium.org/2698813007
Cr-Commit-Position: refs/heads/master@{#451664}

Former-commit-id: 3d1e1301ee8f7c1cab24e2d161218336ea0e7b7c